# flightlog

./: .gitignore  Dockerfile.dev  Makefile  README.md  architecture.d2  diagram.drawio  docker-compose.yml  requirements.ansible.txt
.devcontainer/: devcontainer.json
backend/: Dockerfile  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg
backend/ansible/: build.yml  deploy.yml
backend/ansible/inventory/: build.ini
backend/config/secrets/: production.yml
backend/docker/: Dockerfile  build-local.sh
backend/flightlog/: cli.py  config.py
backend/flightlog/lib/: exceptions.py  igc_parser.py  latlng.py  s3_helpers.py
backend/flightlog/tests/: __init__.py  conftest.py
backend/flightlog/tests/data/: 220415234416.igc
backend/flightlog/tests/integration/: test_s3_helpers.py
backend/flightlog/tests/lib/: test_parse_igc.py
backend/flightlog/tests/unit/: test_igc_parser.py
backend/flightlog/webapp/: app.py
logbook/backend/: .flake8  Dockerfile  Makefile  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt
logbook/backend/logbook/: auth.py  cli.py  config.py  exceptions.py  models.py
logbook/backend/logbook/db/: models.py  queries.py
logbook/backend/logbook/graphql/: __init__.py  data_loaders.py  mutations.py  queries.py  schema.py
logbook/backend/logbook/lib/: auth.py  data_models.py  domain_models.py  exceptions.py  graphql_schema.py
logbook/backend/logbook/tests/data/: data.py  init.sql
logbook/backend/logbook/webapp/: app.py  app_globals.py  auth.py  dependencies.py  exceptions.py
viewer/backend/: Dockerfile  MANIFEST.in  Makefile  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt
viewer/backend/viewer/: cli.py  config.py
viewer/backend/viewer/data/: example.igc
viewer/backend/viewer/lib/: exceptions.py  s3_helpers.py
viewer/backend/viewer/tests/: __init__.py  conftest.py
viewer/backend/viewer/webapp/: app.py  app_globals.py
(+157 files in other folders)
