[build-system]
requires = ["setuptools", "setuptools-scm", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "flightlog"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "click",
    "fastapi",
    "pydantic-settings",
    "python-multipart",
    "uvicorn[standard]"
]
dynamic = ["version"]

[project.scripts]
flightlog = "flightlog.cli:cli"

[tool.setuptools-git-versioning]
enabled = true
