[metadata]
name = flightlog
version = 0.0.2

[options]
packages = find:
include_package_data = True
install_requires=
    boto3
    click
    fastapi
    pydantic-settings
    pytest
    python-multipart
    uvicorn[standard]

[options.entry_points]
console_scripts =
    flightlog = flightlog.cli:cli
