[build-system]
requires = ["setuptools", "setuptools-scm", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "flightlog"
requires-python = ">=3.11"
dynamic = ["version"]

[tool.setuptools.dynamic]
dependencies = {"file"=["requirements.txt"]}
version = {attr = "VERSION"}

[project.scripts]
flightlog = "flightlog.cli:cli"
