[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "viewer"
requires-python = "~=3.12"
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
dependencies = {file = "requirements.txt"}

[project.scripts]
viewer = "viewer.cli:cli"

[tool.isort]
profile = "black"
